--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
   <!--
     - favicon
   -->
-  <link rel="shortcut icon" href="./assets/images/logo.jpg" type="image/x-icon">
+  <link rel="shortcut icon" href="logo.jpg" type="image/x-icon">
 
   <!--
     - custom css link
   -->
-  <link rel="stylesheet" href="./assets/css/style.css">
+  <link rel="stylesheet" href="style.css">
   
 
 
@@ -66,7 +66,7 @@
       <div class="sidebar-info">
 
         <figure class="avatar-box">
-          <img src="./assets/images/photo.jpg" alt="Virti Jain" width="80">
+          <img src="photo.jpg" alt="Virti Jain" width="80">
         </figure>
 
         <div class="info-content">
@@ -262,7 +262,7 @@
             <li class="service-item">
 
               <div class="service-icon-box">
-                <img src="./assets/images/ds1.png" alt="design icon" width="40">
+                <img src="ds1.png" alt="design icon" width="40">
               </div>
 
               <div class="service-content-box">
@@ -278,7 +278,7 @@
             <li class="service-item">
 
               <div class="service-icon-box">
-                <img src="./assets/images/da.png" alt="Web development icon" width="40">
+                <img src="da.png" alt="Web development icon" width="40">
               </div>
 
               <div class="service-content-box">
@@ -294,7 +294,7 @@
             <li class="service-item">
 
               <div class="service-icon-box">
-                <img src="./assets/images/ml.png" alt="mobile app icon" width="40">
+                <img src="ml.png" alt="mobile app icon" width="40">
               </div>
 
               <div class="service-content-box">
@@ -310,7 +310,7 @@
             <li class="service-item">
 
               <div class="service-icon-box">
-                <img src="./assets/images/ai.png" alt="mobile app icon" width="40">
+                <img src="ai.png" alt="mobile app icon" width="40">
               </div>
 
               <div class="service-content-box">
@@ -692,7 +692,7 @@ resources for academic success.  </p>
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/project-1.jpg" alt="finance" loading="lazy">
+                  <img src="project-1.jpg" alt="finance" loading="lazy">
                 </figure>
 
                 <h3 class="project-title">Financial Sentiment Analysis using LLama3</h3>
@@ -709,7 +709,7 @@ resources for academic success.  </p>
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/project-2.jpg"  loading="lazy">
+                  <img src="project-2.jpg"  loading="lazy">
                 </figure>
 
                 <h3 class="project-title">Cross Impact Analysis of Order Flow Imbalance OFI</h3>
@@ -725,7 +725,7 @@ resources for academic success.  </p>
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/project-3.jpg" alt="Advanced Multilingual Document Summarization" loading="lazy">
+                  <img src="project-3.jpg" alt="Advanced Multilingual Document Summarization" loading="lazy">
                 </figure>
 
                 <h3 class="project-title">Advanced Multilingual Document Summarization</h3>
@@ -741,7 +741,7 @@ resources for academic success.  </p>
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/project-4.jpg" alt="Energy Consumption Forecasting for Smart Grids" loading="lazy">
+                  <img src="project-4.jpg" alt="Energy Consumption Forecasting for Smart Grids" loading="lazy">
                 </figure>
 
                 <h3 class="project-title">Energy Consumption Forecasting for Smart Grids</h3>
@@ -757,7 +757,7 @@ resources for academic success.  </p>
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/project-7.jpg" alt="Market Basket Analysis for Grocery Products" loading="lazy">
+                  <img src="project-7.jpg" alt="Market Basket Analysis for Grocery Products" loading="lazy">
                 </figure>
 
                 <h3 class="project-title">Market Basket Analysis for Grocery Products</h3>
@@ -773,7 +773,7 @@ resources for academic success.  </p>
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/project-6.jpg" alt="Real-Time Financial Forecasting and Dashboard" loading="lazy">
+                  <img src="project-6.jpg" alt="Real-Time Financial Forecasting and Dashboard" loading="lazy">
                 </figure>
 
                 <h3 class="project-title">Real-Time Financial Forecasting and Dashboard</h3>
@@ -789,7 +789,7 @@ resources for academic success.  </p>
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/project-8.jpg" alt="Healthcare Data Analysis" loading="lazy">
+                  <img src="project-8.jpg" alt="Healthcare Data Analysis" loading="lazy">
                 </figure>
 
                 <h3 class="project-title">Healthcare Data Analysis</h3>
@@ -826,7 +826,7 @@ resources for academic success.  </p>
               <a href="#">
 
                 <figure class="blog-banner-box">
-                  <img src="./assets/images/blog-1.jpg" alt="Design conferences in 2022" loading="lazy">
+                  <img src="blog-1.jpg" alt="Design conferences in 2022" loading="lazy">
                 </figure>
 
                 <div class="blog-content">
@@ -854,7 +854,7 @@ resources for academic success.  </p>
               <a href="#">
 
                 <figure class="blog-banner-box">
-                  <img src="./assets/images/blog-2.jpg" alt="Best fonts every designer" loading="lazy">
+                  <img src="blog-2.jpg" alt="Best fonts every designer" loading="lazy">
                 </figure>
 
                 <div class="blog-content">
@@ -882,7 +882,7 @@ resources for academic success.  </p>
               <a href="#">
 
                 <figure class="blog-banner-box">
-                  <img src="./assets/images/blog-3.jpg" alt="Design digest #80" loading="lazy">
+                  <img src="blog-3.jpg" alt="Design digest #80" loading="lazy">
                 </figure>
 
                 <div class="blog-content">
@@ -910,7 +910,7 @@ resources for academic success.  </p>
               <a href="#">
 
                 <figure class="blog-banner-box">
-                  <img src="./assets/images/blog-4.jpg" alt="UI interactions of the week" loading="lazy">
+                  <img src="blog-4.jpg" alt="UI interactions of the week" loading="lazy">
                 </figure>
 
                 <div class="blog-content">
@@ -938,7 +938,7 @@ resources for academic success.  </p>
               <a href="#">
 
                 <figure class="blog-banner-box">
-                  <img src="./assets/images/blog-5.jpg" alt="The forgotten art of spacing" loading="lazy">
+                  <img src="blog-5.jpg" alt="The forgotten art of spacing" loading="lazy">
                 </figure>
 
                 <div class="blog-content">
@@ -966,7 +966,7 @@ resources for academic success.  </p>
               <a href="#">
 
                 <figure class="blog-banner-box">
-                  <img src="./assets/images/blog-6.jpg" alt="Design digest #79" loading="lazy">
+                  <img src="blog-6.jpg" alt="Design digest #79" loading="lazy">
                 </figure>
 
                 <div class="blog-content">
@@ -1024,7 +1024,7 @@ resources for academic success.  </p>
             <h3 class="h3 article-title">CV/Resume</h3>
           </header>
   
-          <a href="./assets/VJ Resume Main.pdf" download class="download-btn">
+          <a href="VJ Resume Main.pdf" download class="download-btn">
             <button type="button">
               <i class="fa fa-download"></i> Download CV
           </button>
@@ -1092,7 +1092,7 @@ resources for academic success.  </p>
 <!--
     - custom js link
   -->
-  <script src="./assets/js/script.js"></script>
+  <script src="script.js"></script>
   <script>
     const themeToggleBtn = document.getElementById('theme-toggle');
     themeToggleBtn.addEventListener('click', () => {
