--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
 
 </head>
 
-<body>
+<body style="background-color: black;">
 
-  <main>
+  <main style="background-color: black;">
 
     <!--
       - #SIDEBAR
