--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
                 <h4 class="h4 service-item-title">Data Science</h4>
 
                 <p class="service-item-text">
-                From building robust data pipelines to designing end-to-end machine learning solutions, I focus on delivering insights that empower data-driven decision-making.
+                Empowering decision-making through robust data pipelines and end-to-end machine learning solutions.
                 </p>
               </div>
 
@@ -285,8 +285,7 @@
                 <h4 class="h4 service-item-title">Data Analysis</h4>
 
                 <p class="service-item-text">
-                  Performing high-quality analysis of complex datasets to uncover trends and actionable insights. Leveraging tools like SQL, Python, and Power BI, I ensure that data is not just understood but also drives impactful results.
-                </p>
+                  Uncovering actionable insights from complex datasets using SQL, Python, and Power BI.</p>
               </div>
 
             </li>
@@ -301,8 +300,7 @@
                 <h4 class="h4 service-item-title">Machine Learning</h4>
 
                 <p class="service-item-text">
-                  Developing machine learning models with a focus on accuracy, scalability, and real-world application. Whether it’s regression models, neural networks, or deep learning architectures, I bring a professional touch to every project.
-                </p>
+                 Developing accurate, scalable models for real-world applications, from regression to deep learning.   </p>
               </div>
 
             </li>
@@ -317,7 +315,7 @@
                 <h4 class="h4 service-item-title">Artificial Intelligence</h4>
 
                 <p class="service-item-text">
-                  From natural language processing to real-time predictions, I thrive on crafting smart, efficient solutions.
+                  Crafting smart, efficient solutions in natural language processing and real-time predictions.
                 </p>
               </div>
 
