--- a/index.html
+++ b/index.html
@@ -626,27 +626,9 @@ resources for academic success.  </p>
 
         <section class="projects">
 
-          <ul class="filter-list">
-
-          </ul>
-
           <div class="filter-select-box">
 
-            <button class="filter-select" data-select>
-
-              <div class="select-value" data-selecct-value>Select category</div>
-
-              <div class="select-icon">
-                <ion-icon name="chevron-down"></ion-icon>
-              </div>
-
-            </button>
-
-            <ul class="select-list">
-
-              
-            </ul>
-
+            <button class="filter-select" data-select> </button>
           </div>
 
           <div class="project-list">
