--- a/index.html
+++ b/index.html
@@ -241,8 +241,7 @@
             My portfolio showcases a range of projects from predictive modeling to natural language processing, demonstrating my ability to extract value from data. I'm passionate about leveraging these skills to drive innovation and make data-informed decisions.      
             
             <p>
-          Outside of work, I am just an average New Yorker, shuttling between carbs, failed athleticism, and dreams of uninterrupted sleep. If you see someone passed out on a park bench clutching a half-eaten everything bagel and a badminton racket, no need to call 911 - that's just me living my best New York life .
-          </p>
+          Outside of work, I enjoy the dynamic pace of New York life—balancing a love for great food, staying active (with mixed success), and appreciating the city’s energy. Whether exploring new cafes or unwinding in the park, I find inspiration in the everyday moments that make this city unique. </p>
 
           <p> That's all about me - the good, the bad, and the data-obsessed! Now, I'd love to know about you. Are you also a fellow data wrangler? A spreadsheet whisperer? A Python charmer?
             Let's connect and collaborate! </p>
