--- a/index.html
+++ b/index.html
@@ -714,17 +714,17 @@ resources for academic success.  </p>
             </li>
 
             <li class="project-item active" data-filter-item data-category='["All", "Data Science & Analysis"]'>
-              <a href="https://github.com/Virtirjain09/Real-Time-Financial-Forecasting">
+              <a href="https://github.com/Virtirjain09/Quantitative-Financial-Forecasting-Using-Hybrid-Machine-Learning-Models">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="project-6.jpg" alt="Real-Time Financial Forecasting and Dashboard" loading="lazy">
+                  <img src="project-6.jpg" alt="Quantitative Financial Forecasting Using Hybrid Machine Learning Models" loading="lazy">
                 </figure>
 
-                <h3 class="project-title">Real-Time Financial Forecasting and Dashboard</h3>
+                <h3 class="project-title">Quantitative Financial Forecasting Using Hybrid Machine Learning Modelsd</h3>
 
               </a>
             </li>
