--- a/index.html
+++ b/index.html
@@ -724,7 +724,7 @@ resources for academic success.  </p>
                   <img src="project-6.jpg" alt="Quantitative Financial Forecasting Using Hybrid Machine Learning Models" loading="lazy">
                 </figure>
 
-                <h3 class="project-title">Quantitative Financial Forecasting Using Hybrid Machine Learning Modelsd</h3>
+                <h3 class="project-title">Quantitative Financial Forecasting Using Hybrid Machine Learning Models</h3>
 
               </a>
             </li>
