--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
       <div class="sidebar-info">
 
         <figure class="avatar-box">
-          <img src="photo.jpg" alt="Virti Jain" width="80">
+          <img src="photo.png" alt="Virti Jain" width="80">
         </figure>
 
         <div class="info-content">
