--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
             <div class="contact-info">
               <p class="contact-title">Phone</p>
 
-              <a href="tel:+19342467273" class="contact-link">+1 (934-246-7273)</a>
+              <a href="tel:+19342467273" class="contact-link">+1 934-246-7273</a>
             </div>
 
           </li>
