--- a/index.html
+++ b/index.html
@@ -465,6 +465,18 @@ chance. This tests the hypothesis that fast ripples can prime epileptiform spike
 
             <li class="timeline-item">
 
+              <h4 class="h4 timeline-item-title">Senator</h4>
+              <h3 class="h3 timeline-item-title"><i>Graduate Studennt Organization @ Stony Brook University</i></h3>
+              <span>August 2024 - Present</span>
+
+              <p class="timeline-text">
+                As a Senator in the Graduate Student Organization (GSO) at Stony Brook University, I have been actively involved in representing the interests of graduate students and contributing to the decision-making processes within the organization. In this role, I attend GSO Senate meetings, engage in discussions, and participate in voting when the primary senator is unavailable. 
+                My responsibilities include advocating for graduate students' needs, staying informed about university policies and initiatives, and collaborating with other senators and university officials to develop programs and policies that benefit the graduate student community. </p>
+
+            </li>
+
+            <li class="timeline-item">
+
               <h4 class="h4 timeline-item-title">Secretary</h4>
               <h3 class="h3 timeline-item-title"><i>Women-in-Engineering in IEEE @ AITR</i></h3>
               <span>January 2022 - December 2022</span>
@@ -473,7 +485,7 @@ chance. This tests the hypothesis that fast ripples can prime epileptiform spike
                 As the Secretary of Women-in-Engineering at IEEE, I directed and hosted over 15 data-driven online and offline events, focusing on inclusivity and peer support, 
                 drawing in 500+ students to build community within the STEM fields. Spearheaded the "Women’s Networking Evening" for STEM students, promoting connections and empowering 
                 underrepresented groups to access campus resources and support systems. Demonstrated exceptional attention to detail in organizing meetings, managing event logistics, and ensuring 
-                accurate communication across teams. </p>
+                accurate team communication. </p>
 
             </li>
 
@@ -485,7 +497,7 @@ chance. This tests the hypothesis that fast ripples can prime epileptiform spike
 
               <p class="timeline-text">
                 Supported over 20+ new students in navigating academic challenges and adjusting to campus life, particularly 
-those who missed their first-year experience due to COVID-19. Conducted one-on-one mentoring sessions, providing guidance on course selection, time management, and 
+those who missed their first-year experience due to COVID-19. Conducted one-on-one mentoring sessions, guiding course selection, time management, and 
 personal development. Organized interactive workshops on study techniques, programming fundamentals, and leveraging campus 
 resources for academic success.  </p>
 
