--- a/index.html
+++ b/index.html
@@ -410,6 +410,20 @@
 
             <li class="timeline-item">
 
+              <h4 class="h4 timeline-item-title">Research Project Assistant @ Stony Brook Hospital </h4>
+              <h3 class="h3 timeline-item-title"><i>  Dr. Sharon Nachman’s Lab  </i></h3>
+              <span>Feburary 2025 - Present</span>
+
+              <p class="timeline-text">
+                The project aims to determine if the location of epileptiform spike onset is determined by triangulation 
+(The NIH methods) corresponds with sites where fast ripples precede epileptiform spikes more than 
+chance. This tests the hypothesis that fast ripples can prime epileptiform spikes to occur next. 
+              </p>
+
+            </li>
+
+            <li class="timeline-item">
+
               <h4 class="h4 timeline-item-title">Research Assistant @ Stony Brook Hospital </h4>
               <h3 class="h3 timeline-item-title"><i>  Dr. Shennan A Weiss’s Epilepsy Lab  </i></h3>
               <span>Jan 2025 - Present</span>
