--- a/index.html
+++ b/index.html
@@ -415,9 +415,14 @@
               <span>Feburary 2025 - Present</span>
 
               <p class="timeline-text">
-                The project aims to determine if the location of epileptiform spike onset is determined by triangulation 
-(The NIH methods) corresponds with sites where fast ripples precede epileptiform spikes more than 
-chance. This tests the hypothesis that fast ripples can prime epileptiform spikes to occur next. 
+              <b> 1. Beyfortus (Nirsevimab) Project </b>
+                I conducted a statistical analysis on 52 RSV-associated LRTI patient cases to assess vaccine uptake trends and ICU admission factors. 
+                My work identified significant disparities in Nirsevimab uptake (χ² = 30.77, p < 0.00001) and age-related ICU admission trends (χ² = 18.09, p = 0.0115). Additionally, I analyzed the impact of hospital admission rates, outpatient provider influence (χ² = 71.08, p < 0.00001), and birth location (χ² = 55.38, p < 0.00001) on vaccine administration. Using Python (Pandas, SciPy, Matplotlib), I processed data, performed hypothesis testing, and created visualizations to highlight key findings.
+      </p>
+  <p>
+             <b>Lyme Disease Project</b>
+    For this project, I analyzed 127 patient records to examine how inflammatory markers influenced Lyme arthritis treatment outcomes. 
+    My findings showed that ESR levels were significantly linked to requiring a second course of antibiotics (p = 0.0403), while CRP levels were not (p = 0.1866). I also investigated NSAID usage (χ² = 0.0023, p = 0.962), symptom duration’s effect on treatment response (χ² = 7.87, p = 0.0195), and polyarthritis correlation using Fisher’s Exact Test (p = 1.0). Leveraging Python (Pandas, Matplotlib, SciPy), I conducted data cleaning, statistical testing, and data visualization to uncover patterns in patient treatment responses.
               </p>
 
             </li>
@@ -480,7 +485,7 @@ chance. This tests the hypothesis that fast ripples can prime epileptiform spike
             <li class="timeline-item">
 
               <h4 class="h4 timeline-item-title">Senator</h4>
-              <h3 class="h3 timeline-item-title"><i>Graduate Studennt Organization @ Stony Brook University</i></h3>
+              <h3 class="h3 timeline-item-title"><i>Graduate Student Organization @ Stony Brook University</i></h3>
               <span>August 2024 - Present</span>
 
               <p class="timeline-text">
