--- a/index.html
+++ b/index.html
@@ -1024,7 +1024,7 @@ resources for academic success.  </p>
             <h3 class="h3 article-title">CV/Resume</h3>
           </header>
   
-          <a href="Virti_Jain_Data_Resume.pdf" download class="download-btn">
+          <a href="VJ_resume.pdf" download class="download-btn">
             <button type="button">
               <i class="fa fa-download"></i> Download CV
           </button>
