--- a/index.html
+++ b/index.html
@@ -730,14 +730,14 @@ resources for academic success.  </p>
             </li>
 
             <li class="project-item active" data-filter-item data-category='["All", "Machine Learning", "Data Science & Analysis"]'>
-              <a href="https://github.com/Virtirjain09/Energy-Consumption-Forecasting-for-Smart-Grids">
+              <a href="https://github.com/Virtirjain09/Energy-Consumption-Forecasting">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="project-4.jpg" alt="Energy Consumption Forecasting for Smart Grids" loading="lazy">
+                  <img src="project-4.jpg" alt="Energy Consumption Forecasting" loading="lazy">
                 </figure>
 
                 <h3 class="project-title">Energy Consumption Forecasting for Smart Grids</h3>
@@ -1020,7 +1020,7 @@ resources for academic success.  </p>
             <h3 class="h3 article-title">CV/Resume</h3>
           </header>
   
-          <a href="VJ_resume1.pdf" download class="download-btn">
+          <a href="Virti_Résumé (1).pdf" download class="download-btn">
             <button type="button">
               <i class="fa fa-download"></i> Download CV
           </button>
