Revise personal introduction in index.html
Updated personal introduction and removed some content.

--- a/index.html
+++ b/index.html
@@ -237,15 +237,12 @@
 
         <section class="about-text">
           <p>
-            Hi, I'm Virti, a <b>Data Science graduate</b> student at <b>Stony Brook University </b> with a knack for turning complex data into meaningful insights. My toolkit includes machine learning, deep learning, and big data platforms, which I use to tackle real-world challenges.
-            My portfolio showcases a range of projects from predictive modeling to natural language processing, demonstrating my ability to extract value from data. I'm passionate about leveraging these skills to drive innovation and make data-informed decisions.      
-            
-            <p>
-          Outside of work, I enjoy the dynamic pace of New York life—balancing a love for great food, staying active (with mixed success), and appreciating the city’s energy. Whether exploring new cafes or unwinding in the park, I find inspiration in the everyday moments that make this city unique. </p>
-
-          <p> That's all about me - the good, the bad, and the data-obsessed! Now, I'd love to know about you. Are you also a fellow data wrangler? A spreadsheet whisperer? A Python charmer?
-            Let's connect and collaborate! </p>
-        </section>
+    I am a <b>Data Science</b> graduate student at Stony Brook University based in New York, focused on <i><b>product analytics</b></i> and <i><b>machine learning</b></i>. 
+          </p>
+            <p>I enjoy using data to understand user behavior, design experiments, and build models that inform real product and business decisions. I am seeking New Grad Product Data Scientist or Applied Machine Learning roles starting May 2026, where I can combine experimentation, modeling, and stakeholder-facing insights to drive measurable impact.
+</p><p>Outside of work, I enjoy the pace and energy of New York City, exploring new food spots, staying active, and spending time outdoors. These experiences help me recharge and bring fresh perspective to problem solving. </p>
+      </p>
+  </section>
 
 
         <!--
