Update personal introduction in index.html

--- a/index.html
+++ b/index.html
@@ -237,10 +237,12 @@
 
         <section class="about-text">
           <p>
-    I am a <b>Data Science</b> graduate student at Stony Brook University based in New York, focused on <i><b>product analytics</b></i> and <i><b>machine learning</b></i>. 
-          </p>
-            <p>I enjoy using data to understand user behavior, design experiments, and build models that inform real product and business decisions. I am seeking New Grad Product Data Scientist or Applied Machine Learning roles starting May 2026, where I can combine experimentation, modeling, and stakeholder-facing insights to drive measurable impact.
-</p><p>Outside of work, I enjoy the pace and energy of New York City, exploring new food spots, staying active, and spending time outdoors. These experiences help me recharge and bring fresh perspective to problem solving. </p>
+    Hi there! I am a <b>Data Science</b> graduate student at Stony Brook University based in New York, focused on <i><b>product analytics</b></i> and <i><b>machine learning</b></i>. 
+      I enjoy using data to understand user behavior, design experiments, and build models that inform real product and business decisions.  
+          </p> 
+          <p>I am seeking New Grad Product Data Scientist or Applied Machine Learning roles starting May 2026, where I can combine experimentation, modeling, and stakeholder-facing insights to drive measurable impact.
+</p>
+          <p>Outside of work, I enjoy the pace and energy of New York City, exploring new food spots, staying active, and spending time outdoors. These experiences help me recharge and bring fresh perspective to problem solving. </p>
       </p>
   </section>
 
